First attempt at making behaviors generic. Anything with an IBotBehavior implementation will get loaded and run Added example command Added behavior that changes the game the bot is "Playing" Made more things use interfaces and the DI framework.

--- a/OniBot/config.json
+++ b/OniBot/config.json
@@ -1,3 +1,8 @@
 ﻿{
-  "BotName": "foo",
+  "Games": [ "Massage Table", "Looking at Art", "Vomiting" ],
+  "LogLevel": "Debug",
+  "AlwaysDownloadUsers": true,
+  "MessageCacheSize": 1000,
+  "Token": "Fill me in!",
+  "PrefixChar": "!"
 }
