--- a/OniBot/config.json
+++ b/OniBot/config.json
@@ -6,16 +6,5 @@
   "AlwaysDownloadUsers": true,
   "MessageCacheSize": 1000,
   "Token": "Fill me in!",
-  "PrefixChar": "!",
-  "RandomMessages": [
-    {
-      "Message": "Breaking your things!",
-      "Image": "https://cdn.discordapp.com/attachments/287583710751096832/287648013420068884/2017-03-04.png"
-    },
-    { "Message": "Look at me!" },
-    { "Message": "Suffocating!" },
-    { "Message": "Breaking your things!" }
-  ],
-  "MinMessages": 50,
-  "MaxMessages": 100
+  "PrefixChar": "!"
 }
