Tweaks to some of the commands Make docker files work.

--- a/OniBot/Dockerfile
+++ b/OniBot/Dockerfile
@@ -1,5 +1,5 @@
-FROM microsoft/dotnet:1.1-runtime
+FROM microsoft/dotnet:1.1-runtime-nanoserver
 ARG source
 WORKDIR /app
 COPY ${source:-obj/Docker/publish} .
-ENTRYPOINT ["dotnet", "OniBot.dll"]
+ENTRYPOINT ["dotnet", "OniBot.dll", "-environment production"]
