--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 version: 1.0.{build}
 image: Visual Studio 2017
+before_build:
+- nuget restore OniBot.sln
 build:
   project: OniBot.sln
   verbosity: minimal
