--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ configuration: Release
 test: off  
 
 artifacts:  
-- path: bin\$(configuration)\netcoreapp1.1
+- path: OniBot\bin\$(configuration)\netcoreapp1.1
   name: Release
 
 deploy:
