Updated logging to use Microsoft.Extensions.Logging Updated everything to register and resolve dependencies with an IDependencyMap Created an IDependencyMap implementation that uses Microsoft.Extensions.DependencyInjection Command/Behavior configs are now registered for dependency injection and can be accessed by the constructor Latest configuration can be obtained by calling .Reload() on a configuration object Config key moved to the configuration object in most cases.

--- a/OniBot/config.json
+++ b/OniBot/config.json
@@ -2,5 +2,11 @@
   "LogLevel": "Debug",
   "AlwaysDownloadUsers": true,
   "MessageCacheSize": 1000,
-  "PrefixChar": "!"
+  "PrefixChar": "!",
+  "Logging": {
+    "IncludeScopes": true,
+    "LogLevel": {
+      "Default": "Debug"
+    }
+  }
 }
