--- a/OniBot/OniBot.csproj
+++ b/OniBot/OniBot.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="1.0.0-rc-00614" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="1.1.1" />
