Update to .net core 2.1 Use the generic host to bootstrap the bot hosting env move to CircleCI for building.

--- a/OniBot/Dockerfile
+++ b/OniBot/Dockerfile
@@ -1,5 +1,9 @@
-FROM microsoft/dotnet:1.1.2-runtime-nanoserver
-ARG source
+FROM microsoft/dotnet:2.1-sdk as build
+WORKDIR /src
+COPY . .
+RUN dotnet publish OniBot/OniBot.csproj -r linux-x64 -o /app
+
+FROM microsoft/dotnet:2.1-runtime
 WORKDIR /app
-COPY ${source:-obj/Docker/publish} .
-ENTRYPOINT ["dotnet", "OniBot.dll", "-environment", "production"]
+COPY --from=build /app .
+ENTRYPOINT dotnet OniBot.dll --environment production
