--- a/OniBot/Dockerfile
+++ b/OniBot/Dockerfile
@@ -1,9 +1,9 @@
-FROM microsoft/dotnet:2.1-sdk as build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.1 as build
 WORKDIR /src
 COPY . .
-RUN dotnet publish OniBot/OniBot.csproj -r linux-x64 -o /app
+RUN dotnet publish OniBot/OniBot.csproj -o /app
 
-FROM microsoft/dotnet:2.1-runtime
+FROM mcr.microsoft.com/dotnet/core/runtime:3.1
 WORKDIR /app
 COPY --from=build /app .
 ENTRYPOINT dotnet OniBot.dll --environment production
