Add the ability to do voice tts instead

--- a/OniBot/Properties/launchSettings.json
+++ b/OniBot/Properties/launchSettings.json
@@ -3,6 +3,11 @@
     "OniBot": {
       "commandName": "Project",
       "commandLineArgs": "--environment development"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "environmentVariables": {
+      }
     }
   }
 }
