--- a/OniBot/Dockerfile
+++ b/OniBot/Dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/core/sdk:5.0 as build
 WORKDIR /src
 COPY . .
 RUN dotnet publish OniBot/OniBot.csproj -o /app -r linux-x64
+#COPY OniBot/config /app/config/
 
 FROM mcr.microsoft.com/dotnet/core/runtime:5.0
 RUN apt-get update && apt-get install -y libsodium-dev libopus0 ffmpeg ca-certificates;
