--- a/OniBot/Dockerfile
+++ b/OniBot/Dockerfile
@@ -1,11 +1,10 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:5.0 as build
+FROM mcr.microsoft.com/dotnet/sdk:5.0 as build
 WORKDIR /src
 COPY . .
 RUN dotnet restore OniBot/OniBot.csproj --configfile .nuget/nuget.config -r linux-x64
 RUN dotnet publish OniBot/OniBot.csproj -o /app -r linux-x64 --no-restore
-#COPY OniBot/config /app/config/
 
-FROM mcr.microsoft.com/dotnet/core/runtime:5.0
+FROM mcr.microsoft.com/dotnet/runtime:5.0
 RUN apt-get update && apt-get install -y libsodium-dev libopus0 ffmpeg ca-certificates;
 RUN ln -s /usr/lib/x86_64-linux-gnu/libopus.so.0 /usr/lib/x86_64-linux-gnu/opus.so
 WORKDIR /app
